# InnovationLab-5Safe-project

./:  README.md  .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile_backend  Dockerfile_frontend  MAKE  Makefile  README.md  docker-compose.yml  old_requirements.txt  pyproject.toml  pytest.ini  requirements.txt
.docker/: Dockerfile_backend  Dockerfile_frontend  nginx.conf
.github/workflows/: docs_pages.yml
docs/source/: conf.py  index.rst
il_5safe/: auto_label.py  download.py  main.py  requirements.txt  server.py  setup.py  train.py  video_processor.py
il_5safe/gui/: RunGUI.py
il_5safe/gui/frontend/: package-lock.json  package.json
il_5safe/gui/frontend/public/: index.html
il_5safe/gui/frontend/src/: App.vue  main.js
il_5safe/gui/frontend/src/components/: FullScreenLoading.vue  ResultView.vue  UploadForm.vue
il_5safe/gui/frontend/src/plugins/: vuetify.js
il_5safe/gui/frontend/src/router/: index.js
il_5safe/logs_utils/: colored_logger.py  config.py  logger.py
il_5safe/models/: faster_rcnn.pyx  retina_net.pyx  yolo.pyx
il_5safe/resources/yolov5_utils/: custom_data_model.yaml
il_5safe/utils/: README.md  convert_coco_to_retinanet.py  extractFrames.py  generateLabels.py  order_frames.py  remove_negative_val.py  rename_files.py  video_processor.py
il_5safe/utils/logs_utils/: colored_logger.py  config.py  generateLabels.py  logger.py
tests/test_log_utils/: test_colored_logger.py  test_config.py
yolo_attempts/: extractFrames.py
yolo_attempts/frames_training_dataset/: output_0.txt  output_1.txt  output_10.txt  output_100.txt  output_101.txt  output_1015.txt  output_102.txt  output_1022.txt  output_103.txt  output_1031.txt  output_1032.txt  output_1033.txt  output_1034.txt  output_1035.txt  output_104.txt  output_105.txt  output_106.txt  output_1066.txt  output_1067.txt  output_1068.txt  output_1069.txt  output_107.txt  output_1070.txt  output_1071.txt  output_1072.txt  output_1073.txt  output_1074.txt  output_1075.txt  output_1076.txt  output_1077.txt  output_1078.txt  output_1079.txt  output_108.txt  output_1080.txt  output_1081.txt  output_1082.txt  output_1083.txt  output_1084.txt  output_1085.txt  output_1086.txt  (+2615 more)
