[tool.poetry]
name = "il-5safe"
version = "0.1.0"
description = ""
authors = ["Qubut <s-aahmed@haw-landshut.de>"]
readme = "README.md"
packages = [{include = "il_5safe"}]

[tool.poetry.dependencies]
python = "^3.10"
cython = "^0.29.34"
torch = "^2.0.0"
torchvision = "^0.15.1"
black = "^23.3.0"
sphinx = { version = "^6.1.3", optional = true }
sphinx-rtd-theme = { version = "^1.2.0", optional = true}
sphinxcontrib-napoleon = { version = "^0.7", optional = true}
pytest-benchmark = "^4.0.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

