[tool.poetry]
name = "il-5safe"
version = "0.1.0"
description = ""
authors = ["Qubut <s-aahmed@haw-landshut.de>"]
readme = "README.md"
packages = [{include = "il_5safe"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
cython = "^0.29.34"
torch = "^2.0.0"
torchvision = "^0.15.1"
black = "^23.3.0"
sphinx = { version = "^6.1.3", optional = true }
sphinx-rtd-theme = { version = "^1.2.0", optional = true}
sphinxcontrib-napoleon = { version = "^0.7", optional = true}
pytest-benchmark = "^4.0.0"
opencv-python = "^4.7.0.72"
opencv-python-headless = "^4.7.0.72"
scikit-learn = "^1.2.2"
utils = "^1.0.1"
psutil = "^5.9.5"
tqdm = "^4.65.0"
pillow = "^9.5.0"
gitpython = "^3.1.31"
matplotlib = "^3.7.1"
pyyaml = "^6.0"
requests = "^2.29.0"
scipy = "^1.10.1"
thop = "^0.1.1.post2209072238"
pandas = "^2.0.1"
setuptools = "^67.7.2"
seaborn = "^0.12.2"
clearml = "^1.10.3"
pytest-mock = "^3.10.0"
pytest = "^7.3.1"
coloredlogs = "^15.0.1"
tensorboard = "^2.13.0"
jupyter = "^1.0.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
deploy = ["setuptools", "tritonclient"]
export = ["coremltools", "onnx", "onnx-simplifier", "nvidia-pyindex", "nvidia-tensorrt", "scikit-learn", "tensorflow", "tensorflowjs", "openvino-dev"]
extras = ["ipython", "mss", "albumentations", "pycocotools", "ultralytics"]

