[tool.poetry]
name = "il-5safe"
version = "0.1.0"
description = ""
authors = ["Qubut <s-aahmed@haw-landshut.de>"]
readme = "README.md"
packages = [{include = "il_5safe"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
black = "^23.3.0"
sphinx = { version = "^6.1.3", optional = true }
sphinx-rtd-theme = { version = "^1.2.0", optional = true}
sphinxcontrib-napoleon = { version = "^0.7", optional = true}
opencv-python = "^4.7.0.72"
opencv-python-headless = "^4.7.0.72"
scikit-learn = "^1.2.2"
utils = "^1.0.1"
psutil = "^5.9.5"
tqdm = "^4.65.0"
pillow = "^9.5.0"
requests = "^2.29.0"
scipy = "^1.10.1"
thop = "^0.1.1.post2209072238"
setuptools = "^67.7.2"
pytest = "^7.3.1"
coloredlogs = "^15.0.1"
albumentations = "^1.3.1"
pydantic = "^1.10.9"
gitpython = "^3.1.31"
matplotlib = "^3.7.1"
pyyaml = "^6.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
ultralytics = "^8.0.121"
pandas = "^2.0.2"
seaborn = "^0.12.2"
flask = "^2.3.2"
aiohttp = "^3.8.4"
aiosignal = "^1.3.1"
alabaster = "^0.7.13"
anyio = "^3.7.0"
app-model = "^0.1.4"
appdirs = "^1.4.4"
appnope = "^0.1.3"
argon2-cffi = "^21.3.0"
argon2-cffi-bindings = "^21.2.0"
arrow = "^1.2.3"
asttokens = "^2.2.1"
async-timeout = "^4.0.2"
attrdict = "^2.0.1"
attrs = "^23.1.0"
babel = "^2.12.1"
backcall = "^0.2.0"
beautifulsoup4 = "^4.12.2"
bleach = "^6.0.0"
blessed = "^1.20.0"
blinker = "^1.6.2"
boto3 = "^1.26.160"
botocore = "^1.29.160"
bravado = "^11.0.3"
bravado-core = "^5.17.1"
build = "^0.10.0"
cachey = "^0.2.1"
certifi = "^2023.5.7"
cffi = "^1.15.1"
charset-normalizer = "^3.1.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
deploy = ["setuptools", "tritonclient"]
export = ["coremltools", "onnx", "onnx-simplifier", "nvidia-pyindex", "nvidia-tensorrt", "scikit-learn", "tensorflow", "tensorflowjs", "openvino-dev"]
extras = ["ipython", "mss", "albumentations", "pycocotools", "ultralytics"]

